# ftl-player

./: .gitignore  .gitmessage  CLAUDE.md  CONTRIBUTING.md  HANDOFF_SUMMARY.md  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  lessons-learned.md  settings.gradle.kts
.claude/: config.json  settings.local.json
.claude/context/: claude_architecture_standards.md  claude_code_quality.md  claude_core_workflow.md  copilot-fixes-v1.0.1-010.md  copilot-review-preparation.md  lessons-learned.md  phase3-completion-bugfixes.md  phase3-final-handoff-summary.md
.github/: BRANCH_PROTECTION.md  CODEOWNERS  branch-protection-rules.sh  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance_issue.yml
.github/workflows/: android-ci.yml  dependency-update.yml  release.yml
apk-test-packages/: README.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: models_placeholder.txt
app/src/main/cpp/: CMakeLists.txt  ftl_audio_engine.cpp
app/src/main/cpp/audio_engine/: AudioRenderer.cpp  AudioStream.cpp  FTLAudioEngine.cpp  FTLAudioEngine.h  LatencyMonitor.cpp  PerformanceMonitor.cpp
app/src/main/cpp/dsp/: AudioFormat.cpp  AudioProcessor.cpp  BufferManager.cpp  RealtimeProcessor.cpp
app/src/main/cpp/jni/: audio_engine_jni.cpp  jni_helpers.cpp  jni_helpers.h
app/src/main/cpp/utils/: LogUtils.cpp  MathUtils.cpp  ThreadUtils.cpp  TimeUtils.cpp
app/src/main/kotlin/com/ftl/audioplayer/: FTLAudioApplication.kt  FTLAudioPlayerApplication.kt  MainActivity.kt
app/src/main/kotlin/com/ftl/audioplayer/ai/: NeuralAudioProcessor.kt  TensorFlowLiteModelManager.kt
app/src/main/kotlin/com/ftl/audioplayer/audio/: AudioEngine.kt
app/src/main/kotlin/com/ftl/audioplayer/audio/eq/: ParametricEqualizer.kt
app/src/main/kotlin/com/ftl/audioplayer/data/dao/: PlaylistDao.kt  TrackDao.kt
app/src/main/kotlin/com/ftl/audioplayer/data/database/: MusicDatabase.kt
app/src/main/kotlin/com/ftl/audioplayer/data/entities/: Playlist.kt  PlaylistTrack.kt  Track.kt
app/src/main/kotlin/com/ftl/audioplayer/data/repository/: MusicRepository.kt
app/src/main/kotlin/com/ftl/audioplayer/di/: AIModule.kt  AudioModule.kt  DatabaseModule.kt
app/src/main/kotlin/com/ftl/audioplayer/fitness/: WorkoutTimerSystem.kt
app/src/main/kotlin/com/ftl/audioplayer/playback/: MusicPlayer.kt
app/src/main/kotlin/com/ftl/audioplayer/service/: FTLAudioService.kt
app/src/main/kotlin/com/ftl/audioplayer/settings/: AdvancedSettingsSystem.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/: AudioEngineTestViewModel.kt  MainActivity.kt  SplashActivity.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/components/: MiniPlayer.kt  TrackItem.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/navigation/: FTLNavigation.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/screens/: EqualizerScreen.kt  LibraryScreen.kt  NowPlayingScreen.kt  PlaylistsScreen.kt  SettingsScreen.kt  TestEngineScreen.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/theme/: Color.kt  CyberpunkTheme.kt  FTLAudioTheme.kt  Theme.kt  Type.kt
app/src/main/kotlin/com/ftl/audioplayer/ui/viewmodels/: LibraryViewModel.kt  NowPlayingViewModel.kt  SettingsViewModel.kt
app/src/main/kotlin/com/ftl/audioplayer/utils/: PermissionUtils.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
app/src/test/kotlin/com/ftl/audioplayer/audio/: AudioEngineTest.kt  SimpleAudioEngineTest.kt
audio-engine/: README.md
docs/: APK_TESTING_GUIDE.md  README.md  _sidebar.md  android_manifest.txt  ftl_added_features.md  ftl_navigation.kt  index.md  music_player_prd.md  settings_overview.md
docs/architecture/: system-overview.md
docs/contributing/: ai-development-guide.md
docs/specifications/: audio-specs.md  settings-specification.md
docs/user-guides/: equalizer-guide.md  quick-start.md
docs/wiki/: Home.md
subc0der/: HANDOFF
